experience: update Verwendete Technologien

--- a/index.html
+++ b/index.html
@@ -106,8 +106,11 @@
                 <p>
                     Basierend auf der <a href="https://www.it-talents.de/foerderung/code-competition/edeka-digital-code-competition-08-2019">Aufgabenstellung von IT-Talents</a> ist inez-app eine Implementierung eines intelligenten Einkaufszettels.
                 </p>
-                <a href="https://github.com/ScholliYT/inez" target="_blank">GitHub</a><br>
-                <a href="https://inez-app.azurewebsites.net/" target="_blank">Website</a>
+                <p style="padding-left: 1em;">
+                    <a href="https://github.com/ScholliYT/inez" target="_blank">GitHub</a><br>
+                    <a href="https://inez-app.azurewebsites.net/" target="_blank">Website</a>
+                </p>
+                <p style="font-size: 70%;">Verwendete Technologien: C#, dotNet Core, Blazor</p>
             </div>
 
             <div data-date="Juni 2018">
@@ -117,6 +120,7 @@
                     Erfolgreiche Teilnahme an der <a href="https://www.w-hs.de/robocom-2018/" target="_blank">ROBOCOM
                         2018</a> (2. Platz) der Westfälischen Hochschule in Gelsenkirchen.
                 </p>
+                <p style="font-size: 70%;">Verwendete Technologien: Java, LeJOS, Python, opencv</p>
             </div>
 
             <div data-date="seit März 2018">
@@ -124,8 +128,9 @@
                 <h4>Unterstützung der Entwicklungsabteilung</h4>
                 <p>
                     Neben der Schule bzw. dem Studium unterstützte ich die Entwicklungsabteilung der HK Consulting GmbH.
-                    Zu den verwendeten Technologien zählen C#, .NET, WPF, SQL und C/C++ sowie die Entwicklung eingebetteter Systeme / IoT.
+                    Neben der Entwicklung von Desktopanwendungen habe ich auch Projekte mit eingebetteten Systemen / IoT abgeschlossen.
                 </p>
+                <p style="font-size: 70%;">Verwendete Technologien: C#, .NET (core), WPF, SQL, C/C++</p>
             </div>
 
             <div data-date="Ende 2017">
@@ -134,6 +139,7 @@
                 <p>
                     Entwicklung einer Android App zur Übersicht der Theoriestunden für die Fahrschule Potjans in Dülmen.
                 </p>
+                <p style="font-size: 70%;">Verwendete Technologien: Java, Flutter, Firebase</p>
             </div>
 
             <div data-date="Mai 2017">
@@ -143,6 +149,7 @@
                     Entwicklung einer <a href="https://github.com/ScholliYT/Rucksackproblem"
                         target="_blank">Lösung</a> für das <a href="https://de.wikipedia.org/wiki/Rucksackproblem">I/O Rucksackproblem</a> unter verwendung des Unity Frameworks.
                 </p>
+                <p style="font-size: 70%;">Verwendete Technologien: Unity, C#, .NET</p>
             </div>
 
             <div data-date="Mitte 2015">
@@ -151,6 +158,7 @@
                 <p>
                     Teilnahme an der World robot Olympiad 2015 in Deutschland mit Erfolg bis ins Deutschlandfinale.
                 </p>
+                <p style="font-size: 70%;">Verwendete Technologien: Python, LEGO Mindstorms</p>
             </div>
         </div>
     </div>
