skills: update Travis CI

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <li>Firebase</li>
             <li>Flutter</li>
             <li>C# (.Net)</li>
-            <li>Travis</li>
+            <li>CI (Travis)</li>
             <li>Linux</li>
             <li>Unity</li>
             <li>Arduino (C/C++)</li>
