--- a/index.html
+++ b/index.html
@@ -390,9 +390,7 @@
                 <div class="col-sm-5 copyright">
                     <p>
                         Copyright &copy; 2017
-                        <script>new Date().getFullYear() > 2017 && document.write("-" + new Date().getFullYear());</script>
-                        ,
-                        Tom Stein.<br>
+                        <script>new Date().getFullYear() > 2017 && document.write("-" + new Date().getFullYear());</script>, Tom Stein.<br>
                         <a href="impressum.html">Impressum</a>
                     </p>
                 </div>
