privacy policy for contact form

--- a/index.html
+++ b/index.html
@@ -379,6 +379,9 @@
                 <textarea name="message" placeholder="Nachricht" required></textarea>
                 <button type="submit">Senden</button>
             </form>
+            <div align="right">
+                <a href="https://docs.formspree.io/files/privacy.pdf">Datenschutzerklärung</a>
+            </div>
         </div>
         <!-- End #contact-form -->
     </div>
