projects: added münsterhack 2019 watersensor

--- a/index.html
+++ b/index.html
@@ -217,6 +217,28 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
+                        <img src="images/in_water.jpg">
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>LoRa Wassersensor</h3>
+                        <p>
+                            Zur besseren überwachung von Gewässern haben wir uns damit beschäftigt wie man möglichst günstig brauchbare
+                            Wassermesswerte erfassen kann. Im Rahmen des <a href="https://www.muensterhack.de/">Münsterhacks 2019</a> haben wir einen Prototypen gebaut. Wir nutzen LoraWAN um
+                            die Daten von der Messstation in eine Datenbank zu übertragen.
+                            
+                            <p style="padding-left: 1em;">
+                                <a href="https://github.com/ScholliYT/mshack-wateranalysis" target="_blank">GitHub</a><br>
+                                <a href="https://mshack.lorawan.digital/team5/ui/" target="_blank">Dashboard</a>
+                            </p>
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+                
+                <div class="project shadow-large">
+                    <div class="project-image">
                         <img src="images/lora_top.jpg">
                     </div>
                     <!-- End .project-image -->
