--- a/index.html
+++ b/index.html
@@ -416,7 +416,8 @@
                     <p>
                         Copyright &copy; 2017
                         <script>new Date().getFullYear() > 2017 && document.write("-" + new Date().getFullYear());</script>, Tom Stein.<br>
-                        <a href="impressum.html">Impressum</a>
+                        <a href="impressum.html">Impressum</a><br>
+                        <a href="datenschutz.html">Datenschutzerklärung</a>
                     </p>
                 </div>
                 <div class="col-sm-2 top">
