update contact form

--- a/index.html
+++ b/index.html
@@ -394,16 +394,9 @@
 
     <div id="contact">
         <h2>Kontakt</h2>
-        <div id="contact-form">
-            <form method="POST" action="https://formspree.io/mail@tomstein.me">
-                <input type="hidden" name="_subject" value="Kontaktanfrage von tomstein.me" />
-                <input type="email" name="_replyto" placeholder="Email" required>
-                <textarea name="message" placeholder="Nachricht" required></textarea>
-                <button type="submit">Senden</button>
-            </form>
-            <div align="right">
-                <a href="https://docs.formspree.io/files/privacy.pdf">Datenschutzerklärung</a>
-            </div>
+        <div id="contact-form" style="color: #fff">
+            Email: <a href="mailto:mail@tomstein.me">mail@tomstein.me</a><br>
+            Telegram: @tomstein
         </div>
         <!-- End #contact-form -->
     </div>
