--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                         <h3>Drinko Plinko</h3>
                         <p>
                             Der etwas andere Flaschenöffner :) </br>
-                            Der Kronkorken fällt durch durch mehere Ebenen und trifft in einem der unteren Fächer auf.
+                            Der Kronkorken fällt durch mehere Ebenen und trifft in einem der unteren Fächer auf.
                         </p>
                         <a href="https://imgur.com/a/JkRvDHt" target="_blank">Bilder anzeigen</a>
                     </div>
