dse: added links to Cortina Consult

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -186,7 +186,7 @@
 <h2>Aktualität der Datenschutzerklärung</h2>
 <p>
         Zur Gewährleistung stets aktueller Datenschutzinformationen im Zusammenhang mit den Diensten unserer Website
-        nutzen wir den Online-Service "Datenschutzerklärung mit Cookiebox.pro" der Cortina Consult GmbH, Hafenweg 24 in
+        nutzen wir den Online-Service "Datenschutzerklärung mit Cookiebox.pro" der <a href="https://www.cortina-consult.com/">Cortina Consult GmbH</a>, Hafenweg 24 in
         48155 Münster. Dabei werden die Inhalte unserer Datenschutzerklärung auf den Servern der Cookiebox gehostet und
         zentral verwaltet. Notwendige Änderungen werden durch die Cortina Consult zeitnah umgesetzt und über die direkte
         Einbindung auf unserer Website sofort dargestellt.
@@ -706,3 +706,4 @@
                 </div>
         </details>
 </div>
+Quelle: Diese Datenschutzerklärung wurde durch den Online-Service "Datenschutzerklärung mit Cookiebox.pro" der <a href="https://www.cortina-consult.com/">Cortina Consult GmbH</a> erstellt.
