--- a/index.html
+++ b/index.html
@@ -147,16 +147,16 @@
                 <h4>Rucksackproblem (I/O Knapsack)</h4>
                 <p>
                     Entwicklung einer <a href="https://github.com/ScholliYT/Rucksackproblem"
-                        target="_blank">Lösung</a> für das <a href="https://de.wikipedia.org/wiki/Rucksackproblem">I/O Rucksackproblem</a> unter verwendung des Unity Frameworks.
+                        target="_blank">Lösung</a> für das <a href="https://de.wikipedia.org/wiki/Rucksackproblem">I/O Rucksackproblem</a> unter Verwendung des Unity Frameworks.
                 </p>
                 <p style="font-size: 70%;">Verwendete Technologien: Unity, C#, .NET</p>
             </div>
 
             <div data-date="Mitte 2015">
-                <h3>World robot Olympiad</h3>
+                <h3>World Robot Olympiad</h3>
                 <h4>Programmierung, Bau</h4>
                 <p>
-                    Teilnahme an der World robot Olympiad 2015 in Deutschland mit Erfolg bis ins Deutschlandfinale.
+                    Teilnahme an der World Robot Olympiad 2015 in Deutschland mit Erfolg bis ins Deutschlandfinale.
                 </p>
                 <p style="font-size: 70%;">Verwendete Technologien: Python, LEGO Mindstorms</p>
             </div>
@@ -223,7 +223,7 @@
                     <div class="project-info">
                         <h3>LoRa Wassersensor</h3>
                         <p>
-                            Zur besseren überwachung von Gewässern haben wir uns damit beschäftigt wie man möglichst günstig brauchbare
+                            Zur besseren Überwachung von Gewässern haben wir uns damit beschäftigt, wie man möglichst günstig brauchbare
                             Wassermesswerte erfassen kann. Im Rahmen des <a href="https://www.muensterhack.de/">Münsterhacks 2019</a> haben wir einen Prototypen gebaut. Wir nutzen LoraWAN um
                             die Daten von der Messstation in eine Datenbank zu übertragen.
                             
@@ -245,8 +245,8 @@
                     <div class="project-info">
                         <h3>LoRa Sensor</h3>
                         <p>
-                            Ein Arduino Uno verbunden mit einem LoRa Shield ermöglicht es Sensordaten über große
-                            Distanzen (mehere Kilometer) zu übertragen.
+                            Ein Arduino Uno verbunden mit einem LoRa Shield ermöglicht es, Sensordaten über große
+                            Distanzen (mehrere Kilometer) zu übertragen.
                             In diesem Fall werden Daten von Licht-, Temperatur-, Feuchtigkeits-, Druck- und
                             Höhenmessungen übertragen, welche durch einen
                             <a
@@ -266,7 +266,7 @@
                     <div class="project-info">
                         <h3>LightTron 9000</h3>
                         <p>
-                            Eine LED Lampe basierend auf dem Gefäs: IKEA DROPPAR. Als Mikrocontroller wird ein ESP8266
+                            Eine LED Lampe basierend auf dem Gefä&szlig;: IKEA DROPPAR. Als Mikrocontroller wird ein ESP8266
                             verwendet, welcher sich mit dem WLAN verbindet.
                             Befehle können per MQTT an die Lampe gesendet werden.
                         </p>
@@ -306,7 +306,7 @@
                         <p>
                             Ein mit LEDs beleuchteter Halter für ein Headset / einen Kopfhörer.
                             Zwischen den zwei Milchglasscheiben befinden sich WS2812B LEDs, welche von einem Ardunio
-                            nano angesteuert werden.
+                            Nano angesteuert werden.
                         </p>
                         <a href="https://imgur.com/a/90DKLLF" target="_blank">Projekt anzeigen</a>
                     </div>
@@ -323,7 +323,7 @@
                         <h3>Drinko Plinko</h3>
                         <p>
                             Der etwas andere Flaschenöffner :) </br>
-                            Der Kronkorken fällt durch mehere Ebenen und trifft in einem der unteren Fächer auf.
+                            Der Kronkorken fällt durch mehrere Ebenen und trifft in einem der unteren Fächer auf.
                         </p>
                         <a href="https://imgur.com/a/JkRvDHt" target="_blank">Bilder anzeigen</a>
                     </div>
@@ -339,8 +339,8 @@
                     <div class="project-info">
                         <h3>16x16 RGB LED Matrix</h3>
                         <p>
-                            Diese Matrix wird von einem Teensy 3.6 mit 180MHz angesteuert. Zudem sind 3 TLC5940 LED
-                            Treiber ICs und 2 74CH595 Shiftregister verbaut.
+                            Diese Matrix wird von einem Teensy 3.6 mit 180MHz angesteuert. Zudem sind drei TLC5940 LED
+                            Treiber ICs und zwei 74CH595 Shiftregister verbaut.
                             Die Matrix kann über das DMX Protokoll über WiFi gesteuert werden.
                         </p>
                         <a href="https://scholliyt.github.io/LED-Matrix-16x16/" target="_blank">Projekt anzeigen</a>
@@ -357,9 +357,9 @@
                     <div class="project-info">
                         <h3>10x10 RGB LED Matrix</h3>
                         <p>
-                            Diese Matrix wurde mit mit 5 74CH595 Shiftregistern gebaut, welche von einem Tennsy 3.6 mit
+                            Diese Matrix wurde mit mit f&uuml;nf 74CH595 Shiftregistern gebaut, welche von einem Tennsy 3.6 mit
                             180MHz gesteuert werden.
-                            Derzeit ist eine 8 bit Farbtiefe auf jeder LED möglich.
+                            Derzeit ist eine 8 Bit Farbtiefe auf jeder LED möglich.
                         </p>
                         <a href="https://github.com/ScholliYT/LedMatirx/blob/master/10x10/LedMatrixBaseCode/LedMatrixBaseCode.ino"
                             target="_blank">Projekt anzeigen</a>
