fixed mit mit typo

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                     <div class="project-info">
                         <h3>10x10 RGB LED Matrix</h3>
                         <p>
-                            Diese Matrix wurde mit mit f&uuml;nf 74CH595 Shiftregistern gebaut, welche von einem Tennsy 3.6 mit
+                            Diese Matrix wurde mit f&uuml;nf 74CH595 Shiftregistern gebaut, welche von einem Tennsy 3.6 mit
                             180MHz gesteuert werden.
                             Derzeit ist eine 8 Bit Farbtiefe auf jeder LED möglich.
                         </p>
