--- a/index.html
+++ b/index.html
@@ -388,6 +388,7 @@
             <li>Raspberry Pi</li>
             <li>Python</li>
             <li>SQL</li>
+            <li>TEST</li>
         </ul>
     </div>
     <!-- End #skills -->
