removed broken links

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
 
             <div data-date="Ende 2017">
-                <h3><a href="https://www.fantapptic.me/de" target="_blank">Fantapptic Apps</a></h3>
+                <h3>Fantapptic Apps</h3>
                 <h4>Android App für die Fahrschule Potjans</h4>
                 <p>
                     Entwicklung einer Android App zur Übersicht der Theoriestunden für die Fahrschule Potjans in Dülmen.
@@ -228,8 +228,7 @@
                             die Daten von der Messstation in eine Datenbank zu übertragen.
                             
                             <p style="padding-left: 1em;">
-                                <a href="https://github.com/ScholliYT/mshack-wateranalysis" target="_blank">GitHub</a><br>
-                                <a href="https://mshack.lorawan.digital/team5/ui/" target="_blank">Dashboard</a>
+                                <a href="https://github.com/ScholliYT/mshack-wateranalysis" target="_blank">GitHub</a>
                             </p>
                         </p>
                     </div>
@@ -289,8 +288,6 @@
                             App zur Übersicht der Theoriestunden der Fahrschule Potjans.
                             Man kann also schnell und einfach übers Handy checken, wann man anzutreten hat.
                         </p>
-                        <a href="https://play.google.com/store/apps/details?id=me.fantapptic.potjansApp"
-                            target="_blank">Projekt anzeigen</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
