--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </p>
                 <p style="padding-left: 1em;">
                     <a href="https://github.com/ScholliYT/inez" target="_blank">GitHub</a><br>
-                    <a href="https://inez-app.azurewadsfasfdasdfasdfasfasfebsites.net/" target="_blank">Website</a>
+                    <a href="https://inez-app.azurewebsites.net/" target="_blank">Website</a>
                 </p>
                 <p style="font-size: 70%;">Verwendete Technologien: C#, dotNet Core, Blazor</p>
             </div>
