10x10 RGB Matrix instructables link

--- a/index.html
+++ b/index.html
@@ -359,7 +359,9 @@
                             Derzeit ist eine 8 Bit Farbtiefe auf jeder LED möglich.
                         </p>
                         <a href="https://github.com/ScholliYT/LedMatirx/blob/master/10x10/LedMatrixBaseCode/LedMatrixBaseCode.ino"
-                            target="_blank">Projekt anzeigen</a>
+                            target="_blank">Projekt anzeigen</a> <br>
+                        <a href="https://www.instructables.com/id/10x10-RGB-Led-Matrix/"
+                            target="_blank">Anleitung</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
