update to current job at Fraunhofer

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <p id="age_text">
                         Hi,<br>
                         ich bin Tom, {{AGE}} Jahre alt und <a href="#education">Student der Informatik an der TU Dortmund</a>.
-                        Neben dem Studium arbeite ich für die <a href="http://www.hkconsulting.de" target="_blank">HK Consulting GmbH</a>. In meiner Freizeit beschäftige ich mich gerne mit IoT und sonstigen neuen Technologien.
+                        Neben dem Studium arbeite ich beim <a href="https://www.iml.fraunhofer.de/" target="_blank">Fraunhofer-Institut für Materialfluss und Logistik</a>. In meiner Freizeit beschäftige ich mich gerne mit IoT und sonstigen neuen Technologien.
                     </p>
 
 
@@ -100,6 +100,16 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Erfahrung</h2>
         <div id="experience-timeline">
+            <div data-date="seit Januar 2020">
+                <h3><a href="https://www.iml.fraunhofer.de/" target="_blank">Fraunhofer-Institut für Materialfluss und Logistik</a></h3>
+                <h4>Studentische Hilfskraft in der Softwareentwicklung</h4>
+                <p>
+                    Neben dem Studium arbeite ich als studentische Hilfskraft beim Fraunhofer-Institut für Materialfluss und Logistik in Dortmund.
+                    Dort arbeite ich zusammen mit einem kleinen Team an der Entwicklung von Apps mit Flutter.
+                </p>
+                <p style="font-size: 70%;">Verwendete Technologien: Flutter, GitLab</p>
+            </div>
+
             <div data-date="September 2019">
                 <h3>INEZ - Der INtelligente EinkaufsZettel</h3>
                 <h4>Entwicklung einer Webanwendung</h4>
@@ -122,7 +132,7 @@
                 <p style="font-size: 70%;">Verwendete Technologien: Java, LeJOS, Python, opencv</p>
             </div>
 
-            <div data-date="seit März 2018">
+            <div data-date="März 2018 - Dezember 2019">
                 <h3><a href="http://www.hkconsulting.de" target="_blank">HK Consulting GmbH</a></h3>
                 <h4>Unterstützung der Entwicklungsabteilung</h4>
                 <p>
