--- a/index.html
+++ b/index.html
@@ -110,16 +110,18 @@
                 <p style="font-size: 70%;">Verwendete Technologien: Flutter, GitLab</p>
             </div>
 
-            <div data-date="September 2019">
-                <h3>INEZ - Der INtelligente EinkaufsZettel</h3>
-                <h4>Entwicklung einer Webanwendung</h4>
+            <div data-date="Dezember 2019">
+                <h3>3. Platz beim Produktionsoptimierungsproblem ZF Friedrichshafen</h3>
+                <h4>Entwicklung eines Algorithmus zur optimalen Bestückung von Öfen mit Gußformen</h4>
                 <p>
-                    Basierend auf der <a href="https://www.it-talents.de/foerderung/code-competition/edeka-digital-code-competition-08-2019">Aufgabenstellung von IT-Talents</a> ist inez-app eine Implementierung eines intelligenten Einkaufszettels.
+                    Basierend auf der <a href="https://www.it-talents.de/foerderung/code-competition/zf-code-competition-11-2019">Aufgabenstellung von IT-Talents</a> habe 3 Kollegen und ich einen Algorithmus inkl. Webanwenung entwickelt.
+                    Dieser ermöglicht es die optimale Bestückung eines Ofens mit Gußformen bei vorgegebnen Produktionsmengen zu berechnen.
+                    Mit unserer Lösung konnten wir den <a href="https://www.it-talents.de/blog/partnerunternehmen/machine-learning-by-zf-friedrichshafen-linus-lars-nico-tom-holen-den-dritten-platz">dritten Platz</a> belegen 🎉.
                 </p>
                 <p style="padding-left: 1em;">
-                    <a href="https://github.com/ScholliYT/inez" target="_blank">GitHub</a><br>
+                    <a href="https://github.com/ScholliYT/zf-optimize" target="_blank">GitHub</a><br>
                 </p>
-                <p style="font-size: 70%;">Verwendete Technologien: C#, dotNet Core, Blazor</p>
+                <p style="font-size: 70%;">Verwendete Technologien: C#, dotNet Core, Blazor, Python, Google OR-Tools</p>
             </div>
 
             <div data-date="Juni 2018">
