--- a/index.html
+++ b/index.html
@@ -228,6 +228,26 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
+                        <img src="images/pappenspieler.jpg">
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Pappenspieler</h3>
+                        <p>
+                            Da professionelle DJ Controller leider sehr teuer sind und ich längst nicht alle Funktionen benötige ist aus eigenem Interesse der Pappenspieler entstanden. 
+                            Bestückt mit einem Teensy 3.6 einigen alten Reglern und einer USB-MIDI Verbindung lässt sich so das ein oder andere DJ Programm steuern. 
+                            
+                            <p style="padding-left: 1em;">
+                                <a href="https://github.com/ScholliYT/Pappenspieler" target="_blank">GitHub</a>
+                            </p>
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
                         <img src="images/in_water.jpg">
                     </div>
                     <!-- End .project-image -->
