--- a/index.html
+++ b/index.html
@@ -103,6 +103,28 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Erfahrung</h2>
         <div id="experience-timeline">
+
+            <div data-date="Februar 2020">
+                <h3>Semifinale beim BCX20 Hackathon in Berlin</h3>
+                <h4>Entwicklung einer Lösung zur inversen Immobilensuche</h4>
+                <p>
+                    Um Mobilitätsprobleme wie Stau generell zu vermeiden macht es Sinn seine Wohnort möglichst zentral
+                    zu allen wichten Orten zu wählen.
+                    Dazu haben wir eine die Lösung Place2Be entwicklet welche mit hilfe der here-APIs eine Immobilie mit
+                    möglichst kurzen Wegen zu allen angegebenen Orten findet.
+                    Wir haben dazu <a
+                        href="https://developer.here.com/blog/find-your-perfect-apartment-with-here-and-bcx20">einen
+                        Blogartikel</a> veröffentlicht.
+                    Wir konnten mit unserer Lösung bis ins Semifinale fortschreiten und unsere Idee vor vielen hundert
+                    Teilnehmern pitchen.
+                </p>
+                <p style="padding-left: 1em;">
+                    <a href="https://developer.here.com/blog/find-your-perfect-apartment-with-here-and-bcx20"
+                        target="_blank">Blogpost</a><br>
+                </p>
+                <p style="font-size: 70%;">Verwendete Technologien: Python, React</p>
+            </div>
+
             <div data-date="seit Januar 2020">
                 <h3><a href="https://www.iml.fraunhofer.de/" target="_blank">Fraunhofer-Institut für Materialfluss und
                         Logistik</a></h3>
