--- a/index.html
+++ b/index.html
@@ -103,6 +103,19 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Erfahrung</h2>
         <div id="experience-timeline">
+            <div data-date="April 2020 - August 2020">
+                <h3>Techlabs Track Data Science</h3>
+                <h4>Teilnahme am Online-Kurs zum Thema Data Sciene mit Python</h4>
+                <p>
+                    Während der Zeit im Techlabs Track habe ich mir durch einen Online-Kurs diverse Grundlagen im Data
+                    Science Bereich angeignet. Darunter waren zum Beispiel transformieren von Daten mit pandas,
+                    erstellen von Diagrammen oder statistische Analysen.
+                </p>
+                <p style="padding-left: 1em;">
+                    <a href="https://www.techlabs.org/dataScience" target="_blank">Techlabs Data Science Track</a><br>
+                </p>
+                <p style="font-size: 70%;">Verwendete Technologien: Python, Pandas, Azure</p>
+            </div>
 
             <div data-date="Februar 2020">
                 <h3>Semifinale beim BCX20 Hackathon in Berlin</h3>
