--- a/index.html
+++ b/index.html
@@ -103,6 +103,26 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Erfahrung</h2>
         <div id="experience-timeline">
+            <div data-date="September 2020">
+                <h3>3. Platz beim Münsterhack</h3>
+                <h4>Entwicklung der App TourisMs</h4>
+                <p>
+                    <i>Stadtführungen neu gedacht - wir verweben das Digitale mit dem Analogen, um eine neue Erfahrung
+                        für alte Sehenswürdigkeiten zu bieten.</i><br>
+                    Unter diesem one-sentence-pitch haben wir im Rahmen des 36h Münsterhacks eine Augmented Reality
+                    Android App entwickelt.
+                    Die App richtet sich an Touristen in Münster, welche nicht an einer analogen Stadtführung teilnehmen
+                    möchten, aber trotzdem Information zu Sehenswürdigkeiten erhalten möchten.
+                    Die App erfasst durch Google Cloud Vision die Gebäude, ruft Informationen von Wikipedia ab und
+                    bietet die Möglich diese durch Augmented Reality darzustellen.
+                </p>
+                <p style="padding-left: 1em;">
+                    <a href="https://gitlab.com/tourisms/tourismsapp" target="_blank">GitLab</a><br>
+                    <a href="https://youtu.be/iTgOYSXQ9Gk?t=4109" target="_blank">Pitch</a><br>
+                </p>
+                <p style="font-size: 70%;">Verwendete Technologien: Android, Google Cloud Vision, Augmented Reality</p>
+            </div>
+
             <div data-date="April 2020 - August 2020">
                 <h3>Techlabs Track Data Science</h3>
                 <h4>Teilnahme am Online-Kurs zum Thema Data Sciene mit Python</h4>
