--- a/index.html
+++ b/index.html
@@ -458,16 +458,15 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>Java</li>
-            <li>Android</li>
             <li>Firebase</li>
             <li>Flutter</li>
-            <li>C# (.Net)</li>
-            <li>CI (Travis)</li>
+            <li>C# (.Net Core)</li>
+            <li>CI/CD</li>
             <li>Linux</li>
-            <li>Unity</li>
             <li>Arduino (C/C++)</li>
-            <li>IoT</li>
             <li>Raspberry Pi</li>
+            <li>IoT</li>
+            <li>LoRaWAN</li>
             <li>Python</li>
             <li>SQL</li>
         </ul>
@@ -505,6 +504,10 @@
                     <ul>
                         <li>
                             <a href="https://github.com/ScholliYT" target="_blank"><i class="fa fa-github"
+                                    aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://gitlab.com/ScholliYT" target="_blank"><i class="fa fa-gitlab"
                                     aria-hidden="true"></i></a>
                         </li>
                         <li>
