--- a/index.html
+++ b/index.html
@@ -190,13 +190,13 @@
             </div>
 
             <div data-date="Juni 2018">
-                <h3>ROBOCOM 2018</h3>
+                <h3>2. Platz ROBOCOM 2018</h3>
                 <h4>Programmierung, Bau</h4>
                 <p>
                     Erfolgreiche Teilnahme an der <a href="https://www.w-hs.de/robocom-2018/" target="_blank">ROBOCOM
                         2018</a> (2. Platz) der Westfälischen Hochschule in Gelsenkirchen.
                 </p>
-                <p style="font-size: 70%;">Verwendete Technologien: Java, LeJOS, Python, opencv</p>
+                <p style="font-size: 70%;">Verwendete Technologien: Java, Lego Mindstorms, LeJOS, Python, opencv</p>
             </div>
 
             <div data-date="März 2018 - Dezember 2019">
