update Techlabs Mentor

--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Erfahrung</h2>
         <div id="experience-timeline">
+            <div data-date="seit Oktober 2020">
+                <h3><a href="https://www.techlabs.org/location/dortmund" target="_blank">TechLabs Mentor</a></h3>
+                <h4>für Web Development und Data Science</h4>
+                <p>
+                    Nachdem ich im Sommer 2020 selbst Techie bei TechLabs war, beteilige ich mich jetzt ehrenamtlich als Mentor 
+                    für Web Development und Data Science am Standort Dortmund. 
+                </p>
+                <p style="font-size: 70%;">Verwendete Technologien: Python, TypeScript, Node.js, React</p>
+            </div>
+
             <div data-date="September 2020">
                 <h3>3. Platz beim Münsterhack</h3>
                 <h4>Entwicklung der App TourisMs</h4>
@@ -248,6 +258,14 @@
             <h3>Technische Universität Dortmund</h3>
             <span class="education-date">September 2019 - heute</span>
             <h4>Bachelor of Science (B.Sc.) Informatik</h4>
+            <ul>
+                <li>
+                    Big Data Analytics
+                </li>
+                <li>
+                    Eingebettete Systeme
+                </li>
+            </ul>
         </div>
         <!-- End .education-block -->
 
@@ -460,15 +478,16 @@
             <li>Java</li>
             <li>Firebase</li>
             <li>Flutter</li>
-            <li>C# (.Net Core)</li>
-            <li>CI/CD</li>
+            <li>C# (ASP.Net Core)</li>
+            <li>Python</li>
+            <li>SQL</li>
+            <li>DevOps</li>
             <li>Linux</li>
             <li>Arduino (C/C++)</li>
             <li>Raspberry Pi</li>
             <li>IoT</li>
             <li>LoRaWAN</li>
-            <li>Python</li>
-            <li>SQL</li>
+            <li>3D-Druck</li>
         </ul>
     </div>
     <!-- End #skills -->
