change email link color to white

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
     <div id="contact">
         <h2>Kontakt</h2>
         <div id="contact-form" style="color: #fff">
-            Email: <a href="mailto:mail@tomstein.me">mail@tomstein.me</a><br>
+            Email: <a href="mailto:mail@tomstein.me" style="color: #fff">mail@tomstein.me</a><br>
             Telegram: @tomstein
         </div>
         <!-- End #contact-form -->
