fix it-talents broken links

--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
                 <h4>Entwicklung eines Algorithmus zur optimalen Bestückung von Öfen mit Gußformen</h4>
                 <p>
                     Basierend auf der <a
-                        href="https://www.it-talents.de/foerderung/code-competition/zf-code-competition-11-2019">Aufgabenstellung
+                        href="https://www.it-talents.de/">Aufgabenstellung
                         von IT-Talents</a> habe 3 Kollegen und ich einen Algorithmus inkl. Webanwenung entwickelt.
                     Dieser ermöglicht es die optimale Bestückung eines Ofens mit Gußformen bei vorgegebnen
                     Produktionsmengen zu berechnen.
                     Mit unserer Lösung konnten wir den <a
-                        href="https://www.it-talents.de/blog/partnerunternehmen/machine-learning-by-zf-friedrichshafen-linus-lars-nico-tom-holen-den-dritten-platz">dritten
+                        href="https://www.it-talents.de/">dritten
                         Platz</a> belegen 🎉.
                 </p>
                 <p style="padding-left: 1em;">
