remove broken bfdi.bund.de link

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -331,10 +331,7 @@
                 <summary>9. Recht auf Beschwerde bei einer Aufsichtsbehörde</summary>
                 <div class="details-content">
                         Eine Liste der in Deutschland zuständigen Aufsichtsbehörden können Sie auf der Website der
-                        Bundesbeauftragten für Datenschutz bzw. unter folgendem Link abrufen:
-                        <a href="https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/AufsBehoerdFuerDenNichtOeffBereich/AufsichtsbehoerdenNichtOeffBereich_liste.html"
-                                target=" _blank ">
-                                https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/AufsBehoerdFuerDenNichtOeffBereich/AufsichtsbehoerdenNichtOeffBereich_liste.html</a>
+                        Bundesbeauftragten für Datenschutz abrufen.
                 </div>
         </details>
 </div>
