Add Linkedin to website

--- a/index.html
+++ b/index.html
@@ -522,6 +522,10 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
+                            <a href="https://www.linkedin.com/in/tom1337stein/" target="_blank"><i class="fa fa-linkedin"
+                                    aria-hidden="true"></i></a>
+                        </li>
+                        <li>
                             <a href="https://github.com/ScholliYT" target="_blank"><i class="fa fa-github"
                                     aria-hidden="true"></i></a>
                         </li>
