Add Fencyboy project

--- a/index.html
+++ b/index.html
@@ -313,6 +313,26 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
+                        <img src="images/Fencyboy.png">
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Fencyboy</h3>
+                        <p>
+                            Während meines Studiums habe ich den Elektrozaunsensor Fencyboy entwicklet, 
+                            welcher es ermöglicht die Spannung auf einem Elektrozaun zu messen und anschlißend per LoRaWAN zu übertragen.
+
+                        <p style="padding-left: 1em;">
+                            <a href="https://www.linkedin.com/posts/datacake_datacake-battery-lorawan-activity-6829131256962306048-xmed" target="_blank">Linkedin Post</a>
+                        </p>
+                        </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
                         <img src="images/pappenspieler.jpg">
                     </div>
                     <!-- End .project-image -->
