add Münsterhack 2021 project to Erfahrung
data-inspire.me

--- a/index.html
+++ b/index.html
@@ -103,6 +103,20 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Erfahrung</h2>
         <div id="experience-timeline">
+            <div data-date="September 2021">
+                <h3>Mentorenpreis beim Münsterhack 2021</h3>
+                <h4>Entwicklung von data-inspire.me</h4>
+                <p>
+                    <i>Münsters OpenData und wir zeigen euch was drin steckt! Wir bieten den spielerisch-transparenten Einblick im Web und App über die OpenData von Münster.</i><br>
+                </p>
+                <p style="padding-left: 1em;">
+                    <a href="https://muenster.data-inspire.me" target="_blank">WebApp</a><br>
+                    <a href="https://gitlab.com/data-inspire-me/data-inspire-me" target="_blank">GitLab</a><br>
+                    <a href="https://youtu.be/1DDFkV7o2Fw?t=1587" target="_blank">Pitch</a><br>
+                </p>
+                <p style="font-size: 70%;">Verwendete Technologien: Flutter Web, Open Data</p>
+            </div>
+
             <div data-date="seit Oktober 2020">
                 <h3><a href="https://www.techlabs.org/location/dortmund" target="_blank">TechLabs Mentor</a></h3>
                 <h4>für Web Development und Data Science</h4>
@@ -114,7 +128,7 @@
             </div>
 
             <div data-date="September 2020">
-                <h3>3. Platz beim Münsterhack</h3>
+                <h3>3. Platz beim Münsterhack 2020</h3>
                 <h4>Entwicklung der App TourisMs</h4>
                 <p>
                     <i>Stadtführungen neu gedacht - wir verweben das Digitale mit dem Analogen, um eine neue Erfahrung
