disable linkt to data inspire me live app

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <i>Münsters OpenData und wir zeigen euch was drin steckt! Wir bieten den spielerisch-transparenten Einblick im Web und App über die OpenData von Münster.</i><br>
                 </p>
                 <p style="padding-left: 1em;">
-                    <a href="https://muenster.data-inspire.me" target="_blank">WebApp</a><br>
+                    <!-- <a href="https://muenster.data-inspire.me" target="_blank">WebApp</a><br> -->
                     <a href="https://gitlab.com/data-inspire-me/data-inspire-me" target="_blank">GitLab</a><br>
                     <a href="https://youtu.be/1DDFkV7o2Fw?t=1587" target="_blank">Pitch</a><br>
                 </p>
