update link to BCX20 blog post

--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
                     Dazu haben wir eine die Lösung Place2Be entwicklet welche mit hilfe der here-APIs eine Immobilie mit
                     möglichst kurzen Wegen zu allen angegebenen Orten findet.
                     Wir haben dazu <a
-                        href="https://developer.here.com/blog/find-your-perfect-apartment-with-here-and-bcx20">einen
+                        href="https://www.here.com/learn/blog/find-your-perfect-apartment-with-here-and-bcx20">einen
                         Blogartikel</a> veröffentlicht.
                     Wir konnten mit unserer Lösung bis ins Semifinale fortschreiten und unsere Idee vor vielen hundert
                     Teilnehmern pitchen.
                 </p>
                 <p style="padding-left: 1em;">
-                    <a href="https://developer.here.com/blog/find-your-perfect-apartment-with-here-and-bcx20"
+                    <a href="https://www.here.com/learn/blog/find-your-perfect-apartment-with-here-and-bcx20"
                         target="_blank">Blogpost</a><br>
                 </p>
                 <p style="font-size: 70%;">Verwendete Technologien: Python, React</p>
