--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
                     <div class="project-info">
                         <h3>Fencyboy</h3>
                         <p>
-                            Während meines Studiums habe ich den Elektrozaunsensor Fencyboy entwicklet, 
-                            welcher es ermöglicht die Spannung auf einem Elektrozaun zu messen und anschlißend per LoRaWAN zu übertragen.
+                            Während meines Studiums habe ich den Elektrozaunsensor Fencyboy entwickelt, 
+                            welcher es ermöglicht die Spannung auf einem Elektrozaun zu messen und anschließend per LoRaWAN zu übertragen.
 
                         <p style="padding-left: 1em;">
                             <a href="https://www.linkedin.com/posts/datacake_datacake-battery-lorawan-activity-6829131256962306048-xmed" target="_blank">Linkedin Post</a>
